@@ -19,11 +19,11 @@ public class PrescaleTable
     //
     
     /** column names */
-    private String defaultName = new String();
-    private ArrayList<String> columnNames = new ArrayList<String>();
+    protected String defaultName = new String();
+    protected ArrayList<String> columnNames = new ArrayList<String>();
 
     /** prescale table rows */
-    private ArrayList<PrescaleTableRow> rows=new ArrayList<PrescaleTableRow>();
+    protected ArrayList<PrescaleTableRow> rows=new ArrayList<PrescaleTableRow>();
     
 
     //
@@ -36,12 +36,8 @@ public class PrescaleTable
 	initialize(config);
     }
     
-    /** PrescaleTable constructor for only one path 
-     *  Only fill the table with prescales for the given path.*/
-    public PrescaleTable(IConfiguration config, Path path) {
-    	initializeForGivenPath(config, path);
-    }
-
+    /** NULL CONSTRUCTOR. To allow different construction in subclass. */
+    protected PrescaleTable() {} 
     
     //
     // member functions
@@ -273,85 +269,6 @@ public class PrescaleTable
 		rows.add(row);
 	}
     }
-    
-    /** Initialise prescale table with prescales for the given path. 
-     * This is to be give prescales information for a particular path. */
-    private void initializeForGivenPath(IConfiguration config, Path path)
-    {
-		defaultName="";
-		columnNames.clear();
-		rows.clear();
-		
-		columnNames.add("Path");
-	 
-		ServiceInstance prescaleSvc = config.service("PrescaleService");
-		if (prescaleSvc==null) {
-		    System.err.println("No PrescaleService found.");
-		    return;
-		}
-		
-		StringParameter vDefaultName = (StringParameter)prescaleSvc.parameter("lvl1DefaultLabel","string");
-		if (vDefaultName==null) System.err.println("No string lvl1DefaultLabel found.");
-	 
-		VStringParameter vColumnNames = (VStringParameter)prescaleSvc.parameter("lvl1Labels","vstring");
-		if (vColumnNames==null) {
-		    System.err.println("No vstring lvl1Labels found.");
-		    return;
-		}
-		
-		VPSetParameter vpsetPrescaleTable = (VPSetParameter)prescaleSvc.parameter("prescaleTable","VPSet");
-		if (vpsetPrescaleTable==null) {
-		    System.err.println("No VPSet prescaleTable found.");
-		    return;
-		}
-	
-		if (vDefaultName==null || vDefaultName.value()==null) {
-		    defaultName = "";
-		} else {
-		    defaultName = (String)vDefaultName.value();
-		}
-	
-		for (int i=0;i<vColumnNames.vectorSize();i++)
-		    columnNames.add((String)vColumnNames.value(i));
-		
-		HashMap<String,PrescaleTableRow> pathToRow = new HashMap<String,PrescaleTableRow>();
-		
-		for (int i=0;i<vpsetPrescaleTable.parameterSetCount();i++) {
-		    PSetParameter    pset      =vpsetPrescaleTable.parameterSet(i);
-		    StringParameter  sPathName =
-			(StringParameter)pset.parameter("pathName");
-		    VUInt32Parameter vPrescales=
-			(VUInt32Parameter)pset.parameter("prescales");
-		    String           pathName  =(String)sPathName.value();
-		    
-		    if (config.path(pathName)==null) {
-			System.out.println("invalid pathName '"+pathName+"'.");
-			continue;
-		    }
-		    if (vPrescales.vectorSize()!=columnNames.size()-1) {
-			System.out.println("invalid size of vuint prescales.");
-			continue;
-		    }
-		    
-		    ArrayList<Long> prescales = new ArrayList<Long>();
-		    for (int ii=0;ii<vPrescales.vectorSize();ii++)
-			prescales.add((Long)vPrescales.value(ii));
-		    pathToRow.put(pathName,new PrescaleTableRow(pathName,prescales));
-		}
-		
-		Iterator<Path> itP = config.pathIterator();
-		while (itP.hasNext()) {
-		    // Select only the given path.
-			if(itP.next().equals(path)) {
-			    PrescaleTableRow row = pathToRow.remove(path.name());
-			    if (row==null) 	rows.add(new PrescaleTableRow(path.name(),prescaleCount()));
-			    else 			rows.add(row);				
-			}
-
-		}
-    }
-    
-
     
 }
 
